--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=oddments-server-app
+
+spring.datasource.url=jdbc:mysql://localhost:3306/master
+spring.datasource.username=temp
+spring.datasource.password=tempp@ssw0rd
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
