chore: add jpa and hibernate settings

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,17 @@ spring.datasource.username=temp
 spring.datasource.password=tempp@ssw0rd
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.show-sql=true
+
+# log Application logic
+logging.level.com.heybys.oddments=debug
+
+# log JDBC SQL
+logging.level.org.hibernate.SQL=debug
+
+# log JDBC bind parameters and extracted values
+logging.level.org.hibernate.orm.jdbc.bind=trace
+logging.level.org.hibernate.orm.jdbc.extract=trace
+
 spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
