--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=oddments-server-app
+spring.devtools.add-properties=true
 
 spring.datasource.url=jdbc:mysql://localhost:3306/master
 spring.datasource.username=temp
@@ -10,6 +11,7 @@ spring.jpa.show-sql=true
 spring.jpa.open-in-view=false
 
 # log Application logic
+logging.level.web=debug
 logging.level.com.heybys.oddments=debug
 
 # log JDBC SQL
