--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,33 @@
-spring.application.name=oddments-server-app
-spring.devtools.add-properties=true
 
+# application
+spring.application.name=oddments-server-app
+
+
+# database
 spring.datasource.url=jdbc:mysql://localhost:3306/master
 spring.datasource.username=temp
 spring.datasource.password=tempp@ssw0rd
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+# jpa
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 spring.jpa.open-in-view=false
+
+# liquibase
+spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
+
+# OAuth2
+spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
+spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET}
+spring.security.oauth2.client.registration.google.scope=email, profile
+spring.security.oauth2.client.registration.google.redirectUri={baseUrl}/oauth2/callback/{registrationId}
+
+# jwt
+jwt.signing.public-key-location=classpath:keys/signing-public.pem
+jwt.signing.private-key-location=classpath:keys/signing-private.pem
+jwt.encryption.public-key-location=classpath:keys/encryption-public.pem
+jwt.encryption.private-key-location=classpath:keys/encryption-private.pem
 
 # log Application logic
 logging.level.web=debug
@@ -21,4 +40,5 @@ logging.level.org.hibernate.SQL=debug
 logging.level.org.hibernate.orm.jdbc.bind=trace
 logging.level.org.hibernate.orm.jdbc.extract=trace
 
-spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
+# debug
+spring.devtools.add-properties=true
